feat: implement batch conversion with virtual threads, FHIR validation, and subscription services, along with new architecture documentation and performance configuration.